# sam-validate-pre-commit

./: .pre-commit-config.yaml  .pre-commit-hooks.yaml  CHANGELOG.md  README.md  pyproject.toml
src/sam_validate_pre_commit/: main.py
